--- a/index.html
+++ b/index.html
@@ -204,72 +204,120 @@ function isSkin(r,g,b){
 }
 
 function analyze(){
-  if(!analyzing){return;}
-  if(video.readyState>=2){
-    const w=analyzeCanvas.width,h=analyzeCanvas.height;
-    analyzeCtx.drawImage(video,0,0,w,h);
-    const d=analyzeCtx.getImageData(0,0,w,h).data;
-
-    const rx=Math.floor(w*0.275),ry=Math.floor(h*0.275);
-    const rw=Math.floor(w*0.45),rh=Math.floor(h*0.45);
-
-    let skin=0,total=0;
-    let minX=rw,maxX=0,minY=rh,maxY=0;
-
-    for(let y=ry;y<ry+rh;y++){
-      for(let x=rx;x<rx+rw;x++){
-        const i=(y*w+x)*4;
-        const r=d[i],g=d[i+1],b=d[i+2];
-        total++;
-        if(isSkin(r,g,b)){
-          skin++;
-          const lx=x-rx,ly=y-ry;
-          if(lx<minX)minX=lx;if(lx>maxX)maxX=lx;
-          if(ly<minY)minY=ly;if(ly>maxY)maxY=ly;
-        }
-      }
-    }
-
-    const ratio=skin/total;
-    let status="bad",msg="";
-
-    if(ratio<0.05){
-      status="bad";
-      msg="손가락이 잘 보이지 않습니다. 네모 안쪽에 더 맞춰주세요.";
-    } else {
-      const w2=maxX-minX,h2=maxY-minY;
-      const area=w2*h2,roi=rw*rh;
-      const ar=area/roi;
-      const cx=(minX+maxX)/2/rw,cy=(minY+maxY)/2/rh;
-
-      if(Math.abs(cx-0.5)>0.2 || Math.abs(cy-0.5)>0.2){
-        status="warn";
-        msg="손가락이 중앙에서 벗어났습니다.";
-      } else if(ar<0.15){
-        status="warn";
-        msg="손가락이 너무 멀리 있습니다.";
-      } else if(ar>0.5){
-        status="warn";
-        msg="손가락이 너무 가까이 있습니다.";
-      } else {
-        status="good";
-        msg="등록/인증하기 좋은 상태입니다.";
-      }
-    }
-
-    lastQuality=status;
-
-    fingerGuide.className="finger-guide state-"+status;
-    statusBadge.className="status-badge "+(status==="good"?"good":status==="warn"?"warn":"bad");
-    statusBadge.textContent =
-      status==="good"?"품질 양호":
-      status==="warn"?"조정 필요":"인식 약함";
-
-    if(status==="good"){ showOk(msg); }
-    else{ showErr(msg); okMsg.classList.remove("show"); authOverlay.classList.remove("show"); }
-
-    setButtons(true);
+  if(!analyzing){ return; }
+  if(!video || video.readyState < 2){
+    requestAnimationFrame(analyze);
+    return;
   }
+
+  const w = analyzeCanvas.width;
+  const h = analyzeCanvas.height;
+  analyzeCtx.drawImage(video, 0, 0, w, h);
+  const frame = analyzeCtx.getImageData(0, 0, w, h);
+  const data = frame.data;
+
+  // ROI (네모)
+  const roiX = Math.floor(w * 0.275);
+  const roiY = Math.floor(h * 0.275);
+  const roiW = Math.floor(w * 0.45);
+  const roiH = Math.floor(h * 0.45);
+
+  let skinCount = 0;
+  let totalCount = 0;
+
+  // 윤곽 느낌용: 경계 구간(위/아래/좌/우)
+  const borderMargin = 0.08; // 8% 정도를 경계로
+  let borderSkinCount = 0;
+  let centerSkinCount = 0;
+
+  const centerMargin = 0.3; // 중앙 40% 정도를 "센터"라고 보고
+
+  for(let y = roiY; y < roiY + roiH; y++){
+    for(let x = roiX; x < roiX + roiW; x++){
+      const idx = (y * w + x) * 4;
+      const r = data[idx], g = data[idx+1], b = data[idx+2];
+      totalCount++;
+      if(isSkin(r,g,b)){
+        skinCount++;
+
+        // ROI 기준으로 0~1 정규화 좌표
+        const nx = (x - roiX) / roiW;
+        const ny = (y - roiY) / roiH;
+
+        const isBorder =
+          nx < borderMargin ||
+          nx > 1 - borderMargin ||
+          ny < borderMargin ||
+          ny > 1 - borderMargin;
+
+        const isCenter =
+          nx > 0.5 - centerMargin &&
+          nx < 0.5 + centerMargin &&
+          ny > 0.5 - centerMargin &&
+          ny < 0.5 + centerMargin;
+
+        if(isBorder) borderSkinCount++;
+        if(isCenter) centerSkinCount++;
+      }
+    }
+  }
+
+  const skinRatio = skinCount / totalCount;
+  const borderRatio = borderSkinCount / Math.max(skinCount, 1);
+  const centerRatio = centerSkinCount / Math.max(skinCount, 1);
+
+  let status = "bad";
+  let msg = "";
+
+  // 1) 아예 손가락이 거의 안 보임 (너무 멀거나, 안 올림)
+  if(skinRatio < 0.05){
+    status = "bad";
+    msg = "손가락이 잘 보이지 않습니다. 네모 안에 더 가깝게 가져와 주세요.";
+  }
+  else {
+    // 2) 중앙 쪽에 손가락이 거의 없음 → 위치가 많이 어긋남
+    if(centerRatio < 0.2){
+      status = "warn";
+      msg = "손가락 위치가 중앙에서 많이 벗어났습니다. 네모 중앙으로 맞춰 주세요.";
+    }
+    // 3) 경계 쪽에 피부가 너무 많음 → 너무 가까워서 잘리는 느낌
+    else if(borderRatio > 0.55){
+      status = "warn";
+      msg = "손가락이 화면을 꽉 채워 가장자리가 잘리는 중입니다. 아주 살짝만 멀리 해 주세요.";
+    }
+    else {
+      // ✔ 여기서는 '가까운 것' 자체는 OK, 잘리지만 않으면 좋음
+      status = "good";
+      msg = "지문을 찍기 좋은 거리·위치입니다. 이 상태에서 기준 등록/인증을 해보세요.";
+    }
+  }
+
+  // 상태 저장 및 UI 반영
+  lastQuality = status;
+
+  fingerGuide.className = "finger-guide state-" + status;
+  statusBadge.className =
+    "status-badge " + (status === "good" ? "good" : status === "warn" ? "warn" : "bad");
+  statusBadge.textContent =
+    status === "good" ? "품질 양호" :
+    status === "warn" ? "조정 필요" : "인식 약함";
+
+  // 메시지
+  okMsg.classList.remove("show");
+  errMsg.classList.remove("show");
+  infoMsg.classList.remove("show");
+
+  if(status === "good"){
+    showOk(msg);
+  } else if(status === "warn"){
+    showErr(msg);
+  } else {
+    showErr(msg);
+  }
+
+  // 버튼 상태도 갱신
+  setButtons(true);
+
   requestAnimationFrame(analyze);
 }
 
@@ -332,4 +380,5 @@ window.addEventListener("unload",()=>{
 </script>
 </body>
 </html>
+
 
